kubernetes/apps/kuma/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kuma
  labels:
    name: kuma
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
