kubernetes/apps/kuma/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kuma
spec:
  replicas: 1
  serviceName: kuma-service
  selector:
    matchLabels:
      app: kuma
  template:
    metadata:
      labels:
        app: kuma
    spec:
      containers:
        - name: kuma
          image: louislam/uptime-kuma:1.23.16
          ports:
            - name: web
              containerPort: 3001
              protocol: TCP
          volumeMounts:
            - name: kuma-data
              mountPath: /app/data

  volumeClaimTemplates:
    - metadata:
        name: kuma-data
      spec:
        storageClassName: manual
        accessModes: ["ReadWriteOnce"]
        volumeMode: Filesystem
        resources:
          requests:
            storage: 1Gi
