kubernetes/apps/kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuma-service
spec:
  selector:
    app: kuma
  ports:
  - name: web
    port: 3001
    targetPort: web
